hphp/hack/test/typecheck/class_level_where_clauses/this_eq/partial_classes_bad_01.php.exp
File "partial_classes_bad_01.php", line 16, characters 13-14:
A `where` type constraint is violated here (Typing[4323])
  File "partial_classes_bad_01.php", line 17, characters 7-14:
  This is the class with `where` type constraints
  File "partial_classes_bad_01.php", line 24, characters 35-38:
  Expected `this`
  File "partial_classes_bad_01.php", line 24, characters 42-42:
  But got `C`
File "partial_classes_bad_01.php", line 16, characters 13-14:
A `where` type constraint is violated here (Typing[4323])
  File "partial_classes_bad_01.php", line 17, characters 7-14:
  This is the class with `where` type constraints
  File "partial_classes_bad_01.php", line 24, characters 42-42:
  Expected `C`
  File "partial_classes_bad_01.php", line 24, characters 35-38:
  But got `this = C2`
